commit of the blogpost in it's last version to master

--- a/article.html
+++ b/article.html
@@ -4,7 +4,13 @@
         <link rel="stylesheet" href="css/styles.css" />  
     </head>
     <body>
-        <h1>Here we are going to do a blog post</h1>
-        <p>And this is the first paragraph</p>
+        <div id="container">
+            <div id="post">
+            <h1>This is the title's attractive and interesting of the posts</h1>
+            <p>And this is the first paragraph were we are going to 
+                explain incredible things that you can do with branches
+            </p>
+            </div>
+        </div>
     </body>
 </html>
