inicial structure for the header

--- a/article.html
+++ b/article.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="header">
+                Header
+            </div>
             <div id="post">
             <h1>This is the title's attractive and interesting of the posts</h1>
             <p>And this is the first paragraph were we are going to 
