finished header with a design in css

--- a/article.html
+++ b/article.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="header">
-                Header
+                Hyperblog <span id="tagline">your trusted blog</span>
             </div>
             <div id="post">
             <h1>This is the title's attractive and interesting of the posts</h1>
