Added aditional content for the blog and a different tipography

--- a/article.html
+++ b/article.html
@@ -10,6 +10,12 @@
             <p>And this is the first paragraph were we are going to 
                 explain incredible things that you can do with branches
             </p>
+            <p>
+                Blogs are the best way to share information or your ideas
+                much better than go to conferences or going out in youtube.
+                unless you are a Rockstar. But stadistically you aren't... 
+                for the moment.
+            </p>  
             </div>
         </div>
     </body>
