Added suscription, changes to the header and change to the color in text

--- a/article.html
+++ b/article.html
@@ -6,7 +6,7 @@
     <body>
         <div id="container">
             <div id="header">
-                Hyperblog <span id="tagline">your trusted blog</span>
+                Hyperblog <span id="tagline">your master blog</span>
             </div>
             <div id="post">
             <h1>This is the title's attractive and interesting of the posts</h1>
@@ -19,6 +19,9 @@
                 unless you are a Rockstar. But stadistically you aren't... 
                 for the moment.
             </p>  
+            <p>
+                Suscribe and give me a like.
+            </p>
             </div>
         </div>
     </body>
