Change to the title
because I can

--- a/article.html
+++ b/article.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> The article's title </title>
+        <title> Welcome to hyperblog </title>
         <link rel="stylesheet" href="css/styles.css" />  
     </head>
     <body>
