--- a/article.html
+++ b/article.html
@@ -6,7 +6,9 @@
     <body>
         <div id="container">
             <div id="header">
-                Hyperblog <span id="tagline">your header blog</span>
+                <img id="logo" src="imagenes/dragon.png" />
+                Hyperblog
+                <span id="tagline">your header blog</span>
             </div>
             <div id="post">
             <h1>This is the title's attractive and interesting of the posts</h1>
