--- a/article.html
+++ b/article.html
@@ -1,12 +1,14 @@
 <html>
     <head>
+        <meta charset="utf-8" />
         <title> Welcome to hyperblog 2.0 </title>
         <link rel="stylesheet" href="css/styles.css" />  
     </head>
     <body>
         <div id="container">
             <div id="header">
-                Hyperblog <span id="tagline">your header blog</span>
+                Hyperblog
+                <span id="tagline">your header blog</span>
             </div>
             <div id="post">
             <h1>This is the title's attractive and interesting of the posts</h1>
@@ -23,6 +25,7 @@
                 Suscribe and give me a like.
             </p>
             </div>
+            <div id="footer">Made with love at Platzi</div>
         </div>
     </body>
 </html>
