--- a/article.html
+++ b/article.html
@@ -13,6 +13,7 @@
             <p>And this is the first paragraph were we are going to 
                 explain incredible things that you can do with branches
             </p>
+              <img id="rebelogo" src="https://imgur.com/a/s0yUQdx" />
             <p>
                 Blogs are the best way to share information or your ideas
                 much better than go to conferences or going out in youtube.
